# llm-japanese-models

./: pyproject.toml
src/llm_japanese_models/: open_calm.py
